--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/node": "^15.12.4",
     "nodemon": "^2.0.7",
+    "prettier": "2.6.0",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
   }
