--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.11.0",
     "axios": "^0.21.1",
     "discord.js": "^12.5.3",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "prisma": "^3.11.0"
   },
   "devDependencies": {
     "@types/node": "^15.12.4",
