--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --config nodemon.json src/index.ts",
-    "postinstall":"prisma generate"
+    "start": "nodemon --config nodemon.json src/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -15,10 +14,11 @@
     "axios": "^0.21.1",
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
-    "prisma": "^3.11.0"
+    "mongoose": "^6.3.4"
   },
   "devDependencies": {
     "@types/node": "^15.12.4",
+    "mongodb": "^4.4.1",
     "nodemon": "^2.0.7",
     "prettier": "2.6.0",
     "ts-node": "^10.0.0",
