--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^0.21.1",
     "discord.js": "^14.6.0",
     "dotenv": "^10.0.0",
-    "mongoose": "^6.3.4"
+    "mongoose": "^6.3.4",
+    "pubsub-js": "^1.9.4"
   },
   "devDependencies": {
     "@types/node": "^15.12.4",
