--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --config nodemon.json src/index.ts"
+    "start": "nodemon --config nodemon.json src/index.ts",
+    "deploy-commands": "ts-node ./src/scripts/deploy-commands.ts"
   },
   "author": "",
   "license": "ISC",
