--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --config nodemon.json src/index.ts",
-    "deploy-commands": "ts-node ./src/scripts/deploy-commands.ts"
+    "deploy-commands": "ts-node ./src/scripts/deploy-commands.ts",
+    "migrate": "ts-node src/scripts/cleanDB.ts"
   },
   "author": "",
   "license": "ISC",
