--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --config nodemon.json src/index.ts",
     "deploy-commands": "ts-node ./src/scripts/deploy-commands.ts",
-    "migrate": "ts-node src/scripts/cleanDB.ts"
+    "migrate": "ts-node src/scripts/cleanDB.ts",
+    "build": "tsc --build "
   },
   "author": "",
   "license": "ISC",
